Update README, author

--- a/Assets/Network Lobby Manager/package.json
+++ b/Assets/Network Lobby Manager/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "Network lobby manager for Mirror.",
   "author": {
-    "name": "Ruslan",
+    "name": "Ruslan Nukhov",
     "email": "nukhov2004@bk.ru"
   }
 }
