--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,16 +3,11 @@
     "com.mirror.steamworks.net": "https://github.com/Chykary/FizzySteamworks.git?path=/com.mirror.steamworks.net",
     "com.rlabrecque.steamworks.net": "https://github.com/rlabrecque/Steamworks.NET.git?path=/com.rlabrecque.steamworks.net",
     "com.starasgames.tmpro-dynamic-data-cleaner": "https://github.com/STARasGAMES/tmpro-dynamic-data-cleaner.git#upm",
-    "com.unity.ai.navigation": "2.0.10",
-    "com.unity.cinemachine": "3.1.5",
-    "com.unity.collab-proxy": "2.11.3",
-    "com.unity.ide.rider": "3.0.39",
-    "com.unity.ide.visualstudio": "2.0.26",
+    "com.unity.collab-proxy": "2.11.2",
+    "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.17.0",
     "com.unity.multiplayer.center": "1.0.1",
     "com.unity.nuget.newtonsoft-json": "3.2.2",
-    "com.unity.render-pipelines.universal": "17.3.0",
-    "com.unity.test-framework": "1.6.0",
     "com.unity.timeline": "1.8.10",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.9",
